# labs_additionals

./: README.md
first_semester/dop_lab1/: CMakeLists.txt  input.txt  main.cpp
first_semester/dop_lab3_functions/: CMakeLists.txt  main.cpp
first_semester/dop_lab3_functions/inc/: functions.h
first_semester/dop_lab3_functions/src/: Rabota-nad-massivom.cpp  Read.cpp  Write.cpp
first_semester/dop_lab4_biletiki/: CMakeLists.txt  main.cpp
first_semester/dop_lab5_delete-and-copied/: CMakeLists.txt  main.cpp
first_semester/dop_lab5_delete-and-copied/inc/: functions.h
first_semester/dop_lab5_delete-and-copied/src/: Rabota-nad-massivom.cpp  Read.cpp  Search.cpp  Write.cpp
first_semester/dop_lab7_vector/: CMakeLists.txt  main.cpp
first_semester/dop_lab8_Abstraction/: CMakeLists.txt  Rabota_nad_shape.cpp  Read.cpp  Write.cpp  class.h  functions.h  main.cpp
first_semester/dop_lab9_Maded_Vector/: CMakeLists.txt  Rabota_nad_vectorom.cpp  Read.cpp  Write.cpp  class.h  main.cpp
first_semester/dop_lab9_Maded_vector_2/: CMakeLists.txt  Write.cpp  class.h  main.cpp
first_semester/task_conditions/: Задача №1 Грузоперевозки.docx  Задача №3 Функции.docx  Задача №4 Счастливые билетики.docx  Задача №5 Удаление и дублирование.docx  Задача №7 Практикум по векторам.docx  Задача №8 Абстракция и инкапсуляция.docx  Задача №9 Самодельный вектор.docx
second_semester/2semester_doplab1/: CMakeLists.txt  input.txt  main.cpp
second_semester/2semester_doplab2/: CMakeLists.txt  main.cpp  output.txt
second_semester/2semester_doplab3/: CMakeLists.txt  main.cpp
(+17 files in other folders)
